--- a/styles/globals.css
+++ b/styles/globals.css
@@ -21,3 +21,16 @@ input:checked.defaultCheckbox::before {
 .simple-scroller::-webkit-scrollbar {
     display: none;
 }
+
+.custom-scroller::-webkit-scrollbar {
+    height: 5px;
+}
+
+.custom-scroller::-webkit-scrollbar-thumb {
+    background: #072750;
+    border-radius: 5px;
+}
+
+#file_input input#file-upload-button {
+    background-color: #000 !important;
+}
