drivers part almost finished except total page part. Image crud possible now.

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,6 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
+body {
+    font-family: poppins;
+}
+
 input.defaultCheckbox::before {
     content: url('../public/assets/svg/checked.svg');
     color: white;
